# enigma_csp

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  build_emcc
.cargo/: config.toml
.github/workflows/: test.yml
cspuz_core/: Cargo.toml  build.rs
cspuz_core/lib/: cadical_bridge.cpp  cadical_bridge.h  glucose_bridge.cpp
cspuz_core/src/: csp_repr.rs  integration.rs  lib.rs  norm_csp.rs  parser.rs  pyo3_binding.rs  sat.rs  util.rs
cspuz_core/src/backend/: cadical.rs  glucose.rs  mod.rs
cspuz_rs/: Cargo.toml
cspuz_rs/src/: generator.rs  graph.rs  hex.rs  items.rs  lib.rs  mod.rs  serializer.rs  solver.rs
cspuz_rs/src/puzzle/: akari.rs  akari_regions.rs  akari_rgb.rs  akichiwake.rs  aqre.rs  aquapelago.rs  araf.rs  archipelago.rs  ayeheya.rs  barns.rs  castle_wall.rs  cave.rs  chainedb.rs  chocobanana.rs  cocktail.rs  coffeemilk.rs  compass.rs  coral.rs  creek.rs  cross_border_parity_loop.rs  crosswall.rs  curvedata.rs  dbchoco.rs  doppelblock.rs  double_lits.rs  evolmino.rs  fillomino.rs  firefly.rs  firewalk.rs  fivecells.rs  guidearrow.rs  hashi.rs  herugolf.rs  heyawake.rs  hidato.rs  icewalk.rs  inverse_litso.rs  kakuro.rs  kouchoku.rs  kropki.rs  (+51 more)
cspuz_rs_macro/: Cargo.toml
cspuz_rs_macro/src/: lib.rs
cspuz_solver_backend/: Cargo.toml
cspuz_solver_backend/src/: board.rs  lib.rs  uniqueness.rs
cspuz_solver_backend/src/puzzle/: akari.rs  akari_regions.rs  akari_rgb.rs  akichiwake.rs  aqre.rs  aquapelago.rs  araf.rs  archipelago.rs  barns.rs  castle_wall.rs  cave.rs  chainedb.rs  chocobanana.rs  cocktail.rs  coffeemilk.rs  compass.rs  coral.rs  creek.rs  cross_border_parity_loop.rs  crosswall.rs  curvedata.rs  dbchoco.rs  doppelblock.rs  double_lits.rs  evolmino.rs  fillomino.rs  firefly.rs  firewalk.rs  fivecells.rs  guidearrow.rs  hashi.rs  herugolf.rs  heyawake.rs  hidato.rs  icewalk.rs  inverse_litso.rs  kakuro.rs  kouchoku.rs  kropki.rs  kropki_pairs.rs  (+47 more)
enigma_csp/: Cargo.toml  build.rs
enigma_csp/lib/: glucose_bridge.cpp  glucose_bridge.h
enigma_csp/src/: arithmetic.rs  config.rs  csp.rs  csp_repr.rs  csugar_cli.rs  custom_constraints.rs  domain.rs  encoder.rs  glucose.rs  integration.rs  lib.rs  norm_csp.rs  normalizer.rs  parser.rs  pyo3_binding.rs  sat.rs  test_util.rs  util.rs  wasm.rs
enigma_csp/src/backend/: cadical.rs  external.rs  glucose.rs  mod.rs
lib/: glucose_bridge.cpp  glucose_bridge.h
src/: arithmetic.rs  config.rs  csp.rs  csp_repr.rs  csugar_cli.rs  encoder.rs  glucose.rs  integration.rs  lib.rs  norm_csp.rs  normalizer.rs  parser.rs  pyo3_binding.rs  sat.rs  util.rs
src/puzzle/: graph.rs  mod.rs  nurikabe.rs  nurimisaki.rs  slitherlink.rs  solver.rs  star_battle.rs
tests/: test_cspuz_solver_backend.js
util/: emcc  emcc_wrapper
