[package]
name = "cspuz_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["csp-extra-constraints", "generator"]
csp-extra-constraints = ["cspuz_core/csp-extra-constraints"]
generator = ["rand"]

[dependencies]
cspuz_core = { path = "../cspuz_core", default-features = false }
cspuz_rs_macro = { path = "../cspuz_rs_macro" }
rand = { version = "0.8.5", optional = true }
