[package]
name = "enigma_csp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "enigma_csp"
crate-type = ["cdylib", "lib"]

[features]
default = ["csp-extra-constraints", "parser"]
sat-analyzer = []
parser = ["dep:nom"]

# Enable support for extra CSP constraints which are not used in puzzle solvers.
csp-extra-constraints = []

[dependencies]
getopts = "0.2"
nom = { version = "7.0.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.14.5", features = ["extension-module"] }

[build-dependencies]
cc = "1.0"
