[package]
name = "enigma_csp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "enigma_csp"
crate-type = ["cdylib", "lib"]

[features]
default = ["csp-extra-constraints", "parser", "cli", "backend-external", "backend-cadical"]
sat-analyzer = []
parser = ["dep:nom"]
cli = ["parser", "dep:getopts"]
backend-external = []
backend-cadical = []

# Enable support for extra CSP constraints which are not used in puzzle solvers.
csp-extra-constraints = []

[dependencies]
getopts = { version = "0.2", optional = true }
nom = { version = "7.0.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }

[build-dependencies]
cc = "1.0"
